--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "@types/node": "12.12.7",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "axios": "^0.19.0",
+    "axios-hooks": "^1.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0",
