--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,11 @@
     "@types/react-dom": "16.9.4",
     "axios": "^0.19.0",
     "axios-hooks": "^1.7.2",
+    "leaflet": "^1.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-pig": "^1.1.0",
+    "react-leaflet": "^2.5.0",
     "react-scripts": "3.2.0",
     "styled-components": "^4.4.1",
     "typescript": "3.7.2"
@@ -38,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-leaflet": "^2.5.0",
     "@types/styled-components": "^4.4.0"
   }
 }
