--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,9 @@
     "leaflet": "^1.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-pig": "^1.1.0",
     "react-leaflet": "^2.5.0",
+    "react-pig": "^1.1.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "styled-components": "^4.4.1",
     "typescript": "3.7.2"
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@types/react-leaflet": "^2.5.0",
+    "@types/react-router-dom": "^5.1.2",
     "@types/styled-components": "^4.4.0"
   }
 }
