--- a/server/Pipfile
+++ b/server/Pipfile
@@ -15,6 +15,10 @@ flask-bcrypt = "*"
 requests = "*"
 Pillow = "*"
 numpy = "*"
+pyopenssl = "*"
+google_auth_oauthlib = "*"
+google-auth-httplib2 = "*"
+google-api-python-client = "*"
 face_recognition = "*"
 jsonschema = "*"
 gunicorn = "*"
