--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-leaflet": "^2.5.0",
     "react-pig": "^1.1.0",
     "react-router-dom": "^5.1.2",
+    "react-html5-camera-photo": "^1.5.2",
     "react-scripts": "3.2.0",
     "styled-components": "^4.4.1",
     "typescript": "3.7.2"
