--- a/server/Pipfile
+++ b/server/Pipfile
@@ -17,6 +17,7 @@ Pillow = "*"
 numpy = "*"
 pyopenssl = "*"
 google_auth_oauthlib = "*"
+python-dateutil = "*"
 google-auth-httplib2 = "*"
 google-api-python-client = "*"
 face_recognition = "*"
