--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,12 @@
     "leaflet": "^1.5.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-html5-camera-photo": "^1.5.2",
     "react-leaflet": "^2.5.0",
     "react-pig": "^1.1.0",
     "react-router-dom": "^5.1.2",
-    "react-html5-camera-photo": "^1.5.2",
     "react-scripts": "3.2.0",
+    "react-swipeable-routes": "^0.6.0",
     "styled-components": "^4.4.1",
     "typescript": "3.7.2"
   },
