--- a/server/Pipfile
+++ b/server/Pipfile
@@ -22,6 +22,7 @@ google-auth-httplib2 = "*"
 google-api-python-client = "*"
 face_recognition = "*"
 jsonschema = "*"
+opencv-python = "*"
 gunicorn = "*"
 
 [dev-packages]
