--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.6.1",
+    "@material-ui/icons": "^4.5.1",
     "@types/jest": "24.0.23",
     "@types/node": "12.12.7",
     "@types/react": "16.9.11",
@@ -20,7 +21,8 @@
     "react-scripts": "3.2.0",
     "react-swipeable-routes": "^0.6.0",
     "styled-components": "^4.4.1",
-    "typescript": "3.7.2"
+    "typescript": "3.7.2",
+    "use-position": "^0.0.6"
   },
   "scripts": {
     "start": "HTTPS=true react-scripts start",
