--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "use-position": "^0.0.6"
   },
   "scripts": {
-    "start": "HTTPS=true react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
